# ros_arduino_bridge

./: .gitignore  README.md
ros_arduino_firmware/: CMakeLists.txt  package.xml
ros_arduino_firmware/src/libraries/ROSArduinoBridge/: ROSArduinoBridge.ino  commands.h  diff_controller.h  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino
ros_arduino_msgs/: CMakeLists.txt  package.xml
ros_arduino_msgs/msg/: Analog.msg  AnalogFloat.msg  Digital.msg  SensorState.msg
ros_arduino_python/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_arduino_python/config/: arlo_arduino_params.yaml
ros_arduino_python/launch/: arduino_launch.py
ros_arduino_python/nodes/: arduino_node.py
ros_arduino_python/ros_arduino_python/: arduino_driver.py  arduino_sensors.py  base_controller.py
