<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_arduino_python</name>
  <version>0.3.0</version>
  <description>
    ROS Arduino Python.
  </description>
  <author>Patrick Goebel, Ben Bongalon</author>
  <maintainer email="ben.bongalon@gmail.com">Ben Bongalon</maintainer>
  <maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/ros_arduino_python</url>

  <depend>ros_arduino_msgs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
